// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SWITCH_LAYOUT_SYSTEM switches from flex to pins correctly 1`] = `
Array [
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": true,
    "name": "App",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "View",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "bbb",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "content": Array [
                  Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "key": "position",
                    "keyComments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "PROPERTY_ASSIGNMENT",
                    "value": Object {
                      "comments": Object {
                        "leadingComments": Array [],
                        "trailingComments": Array [],
                      },
                      "type": "ATTRIBUTE_VALUE",
                      "uid": "",
                      "value": "absolute",
                    },
                  },
                  Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "key": "height",
                    "keyComments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "PROPERTY_ASSIGNMENT",
                    "value": Object {
                      "comments": Object {
                        "leadingComments": Array [],
                        "trailingComments": Array [],
                      },
                      "type": "ATTRIBUTE_VALUE",
                      "uid": "",
                      "value": 300,
                    },
                  },
                  Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "key": "left",
                    "keyComments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "PROPERTY_ASSIGNMENT",
                    "value": Object {
                      "comments": Object {
                        "leadingComments": Array [],
                        "trailingComments": Array [],
                      },
                      "type": "ATTRIBUTE_VALUE",
                      "uid": "",
                      "value": 0,
                    },
                  },
                  Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "key": "top",
                    "keyComments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "PROPERTY_ASSIGNMENT",
                    "value": Object {
                      "comments": Object {
                        "leadingComments": Array [],
                        "trailingComments": Array [],
                      },
                      "type": "ATTRIBUTE_VALUE",
                      "uid": "",
                      "value": 0,
                    },
                  },
                  Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "key": "width",
                    "keyComments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "PROPERTY_ASSIGNMENT",
                    "value": Object {
                      "comments": Object {
                        "leadingComments": Array [],
                        "trailingComments": Array [],
                      },
                      "type": "ATTRIBUTE_VALUE",
                      "uid": "",
                      "value": 200,
                    },
                  },
                ],
                "type": "ATTRIBUTE_NESTED_OBJECT",
                "uid": "",
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "",
        },
      ],
      "name": Object {
        "baseVariable": "View",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": "aaa",
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "style",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "content": Array [
              Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "key": "backgroundColor",
                "keyComments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "PROPERTY_ASSIGNMENT",
                "value": Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "type": "ATTRIBUTE_VALUE",
                  "uid": "",
                  "value": "#FFFFFF",
                },
              },
              Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "key": "position",
                "keyComments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "PROPERTY_ASSIGNMENT",
                "value": Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "type": "ATTRIBUTE_VALUE",
                  "uid": "",
                  "value": "absolute",
                },
              },
            ],
            "type": "ATTRIBUTE_NESTED_OBJECT",
            "uid": "",
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": false,
    "name": "storyboard",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Scene",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "component",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "definedElsewhere": Array [
                  "App",
                ],
                "elementsWithin": Object {},
                "javascript": "App",
                "originalJavascript": "App",
                "sourceMap": null,
                "transpiledJavascript": "return App",
                "type": "ATTRIBUTE_OTHER_JAVASCRIPT",
                "uid": "",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "scene-0",
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "",
        },
      ],
      "name": Object {
        "baseVariable": "Storyboard",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": "utopia-storyboard-uid",
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
]
`;

exports[`SWITCH_LAYOUT_SYSTEM switches from pins to flex correctly 1`] = `
Array [
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": true,
    "name": "App",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "View",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "bbb",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "content": Array [
                  Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "key": "position",
                    "keyComments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "PROPERTY_ASSIGNMENT",
                    "value": Object {
                      "comments": Object {
                        "leadingComments": Array [],
                        "trailingComments": Array [],
                      },
                      "type": "ATTRIBUTE_VALUE",
                      "uid": "",
                      "value": "relative",
                    },
                  },
                  Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "key": "flexBasis",
                    "keyComments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "PROPERTY_ASSIGNMENT",
                    "value": Object {
                      "comments": Object {
                        "leadingComments": Array [],
                        "trailingComments": Array [],
                      },
                      "type": "ATTRIBUTE_VALUE",
                      "uid": "",
                      "value": 200,
                    },
                  },
                  Object {
                    "comments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "key": "height",
                    "keyComments": Object {
                      "leadingComments": Array [],
                      "trailingComments": Array [],
                    },
                    "type": "PROPERTY_ASSIGNMENT",
                    "value": Object {
                      "comments": Object {
                        "leadingComments": Array [],
                        "trailingComments": Array [],
                      },
                      "type": "ATTRIBUTE_VALUE",
                      "uid": "",
                      "value": 300,
                    },
                  },
                ],
                "type": "ATTRIBUTE_NESTED_OBJECT",
                "uid": "",
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "",
        },
      ],
      "name": Object {
        "baseVariable": "View",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": "aaa",
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "style",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "content": Array [
              Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "key": "backgroundColor",
                "keyComments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "PROPERTY_ASSIGNMENT",
                "value": Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "type": "ATTRIBUTE_VALUE",
                  "uid": "",
                  "value": "#FFFFFF",
                },
              },
              Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "key": "display",
                "keyComments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "PROPERTY_ASSIGNMENT",
                "value": Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "type": "ATTRIBUTE_VALUE",
                  "uid": "",
                  "value": "flex",
                },
              },
            ],
            "type": "ATTRIBUTE_NESTED_OBJECT",
            "uid": "",
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": false,
    "name": "storyboard",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Scene",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "component",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "definedElsewhere": Array [
                  "App",
                ],
                "elementsWithin": Object {},
                "javascript": "App",
                "originalJavascript": "App",
                "sourceMap": null,
                "transpiledJavascript": "return App",
                "type": "ATTRIBUTE_OTHER_JAVASCRIPT",
                "uid": "",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "scene-0",
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "",
        },
      ],
      "name": Object {
        "baseVariable": "Storyboard",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": "utopia-storyboard-uid",
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
]
`;
